refactor: remove import declaration

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <canvas id="trajectory" height="1000" width="1000"></canvas>
     <canvas id="screen" height="1000" width="1000"></canvas>
-    <script src="scripts/simulation.js" type="module"></script>
+    <script src="scripts/pendulum.js"></script>
+    <script src="scripts/simulation.js"></script>
 </body>
 </html>
